yandex logs: stage 1
